fix(app.component): Fix overflow problem

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,7 @@
   background: $app-background;
   width: 100%;
   min-height: 100%;
+  overflow-x: hidden;
 
   &__header {
     position: sticky;
